@@ -3,6 +3,7 @@
 - Added Code::Blocks project
 - Fixed crash when clicking below last track
 - Major refactor of render system : allow software rendering where OpenGL is not optimal
+- Fixed multiple printing-related crashes and infinite recursions
 
 1.2b4
 - Switched to unified (native) toolbar on mac  (WARNING: requires patching wxWidgets, see docs)
